{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 19,
  "lineage": "616d7261-1f26-4837-c92c-41bd307e96c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-eip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4ff1de5374c26af",
            "domain": "vpc",
            "id": "eipalloc-0f4ff1de5374c26af",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-229-36-166.us-west-2.compute.amazonaws.com",
            "public_ip": "44.229.36.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "israelalonzo-terraform-eip-for-nat-gw"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-eip-for-nat-gw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:internet-gateway/igw-0fa2541f987cb15b9",
            "id": "igw-0fa2541f987cb15b9",
            "owner_id": "450183644535",
            "tags": {
              "Name": "israelalonzo-terraform-internet-gw"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-internet-gw"
            },
            "vpc_id": "vpc-0043826278c04f587"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4ff1de5374c26af",
            "connectivity_type": "public",
            "id": "nat-07561d8f9d10c6fa9",
            "network_interface_id": "eni-0dc789b17cf09d3ed",
            "private_ip": "172.30.0.80",
            "public_ip": "44.229.36.166",
            "subnet_id": "subnet-0e52f243de572c011"
          },
          "dependencies": [
            "aws_eip.terraform-eip-for-nat-gw",
            "aws_internet_gateway.terraform-internet-gw",
            "aws_subnet.terraform-public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:route-table/rtb-0c311894665c12e3c",
            "id": "rtb-0c311894665c12e3c",
            "owner_id": "450183644535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07561d8f9d10c6fa9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "israelalonzo-terraform-private-route-table-1"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0043826278c04f587"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-eip-for-nat-gw",
            "aws_internet_gateway.terraform-internet-gw",
            "aws_nat_gateway.terraform-nat-gw",
            "aws_subnet.terraform-public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:route-table/rtb-0ce0bbee10c69b9bc",
            "id": "rtb-0ce0bbee10c69b9bc",
            "owner_id": "450183644535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa2541f987cb15b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "israelalonzo-terraform-public-route-table-1"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-public-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0043826278c04f587"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private-route-table-1-with-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091d5e1c6b6ad32b3",
            "route_table_id": "rtb-0c311894665c12e3c",
            "subnet_id": "subnet-0e65d2a3c7f709d4e"
          },
          "dependencies": [
            "aws_eip.terraform-eip-for-nat-gw",
            "aws_internet_gateway.terraform-internet-gw",
            "aws_nat_gateway.terraform-nat-gw",
            "aws_route_table.terraform-private-route-table-1",
            "aws_subnet.terraform-private-subnet-1",
            "aws_subnet.terraform-public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private-route-table-1-with-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0804e7959510dabed",
            "route_table_id": "rtb-0c311894665c12e3c",
            "subnet_id": "subnet-03139955002dbf37a"
          },
          "dependencies": [
            "aws_eip.terraform-eip-for-nat-gw",
            "aws_internet_gateway.terraform-internet-gw",
            "aws_nat_gateway.terraform-nat-gw",
            "aws_route_table.terraform-private-route-table-1",
            "aws_subnet.terraform-private-subnet-2",
            "aws_subnet.terraform-public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private-route-table-1-with-private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b8dce13c5342919",
            "route_table_id": "rtb-0c311894665c12e3c",
            "subnet_id": "subnet-0b0961279e8977f95"
          },
          "dependencies": [
            "aws_eip.terraform-eip-for-nat-gw",
            "aws_internet_gateway.terraform-internet-gw",
            "aws_nat_gateway.terraform-nat-gw",
            "aws_route_table.terraform-private-route-table-1",
            "aws_subnet.terraform-private-subnet-3",
            "aws_subnet.terraform-public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-route-table-1-with-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015eb2bacf47749dc",
            "route_table_id": "rtb-0ce0bbee10c69b9bc",
            "subnet_id": "subnet-0e52f243de572c011"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gw",
            "aws_route_table.terraform-public-route-table-1",
            "aws_subnet.terraform-public-subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-route-table-1-with-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024152651a0d8df48",
            "route_table_id": "rtb-0ce0bbee10c69b9bc",
            "subnet_id": "subnet-048494a39003dde9c"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gw",
            "aws_route_table.terraform-public-route-table-1",
            "aws_subnet.terraform-public-subnet-2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-route-table-1-with-public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022821d5e513f05bd",
            "route_table_id": "rtb-0ce0bbee10c69b9bc",
            "subnet_id": "subnet-012df79e060afbf35"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gw",
            "aws_route_table.terraform-public-route-table-1",
            "aws_subnet.terraform-public-subnet-3",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:subnet/subnet-0e65d2a3c7f709d4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.30.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e65d2a3c7f709d4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "israelalonzo-terraform-private-subnet-1"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-private-subnet-1"
            },
            "vpc_id": "vpc-0043826278c04f587"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:subnet/subnet-03139955002dbf37a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.30.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03139955002dbf37a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "israelalonzo-terraform-private-subnet-2"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-private-subnet-2"
            },
            "vpc_id": "vpc-0043826278c04f587"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:subnet/subnet-0b0961279e8977f95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.30.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0961279e8977f95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "israelalonzo-terraform-private-subnet-3"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-private-subnet-3"
            },
            "vpc_id": "vpc-0043826278c04f587"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:subnet/subnet-0e52f243de572c011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.30.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e52f243de572c011",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "israelalonzo-terraform-public-subnet-1"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-public-subnet-1"
            },
            "vpc_id": "vpc-0043826278c04f587"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:subnet/subnet-048494a39003dde9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.30.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048494a39003dde9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "israelalonzo-terraform-public-subnet-2"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-public-subnet-2"
            },
            "vpc_id": "vpc-0043826278c04f587"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:subnet/subnet-012df79e060afbf35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.30.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012df79e060afbf35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "israelalonzo-terraform-public-subnet-3"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-public-subnet-3"
            },
            "vpc_id": "vpc-0043826278c04f587"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:450183644535:vpc/vpc-0043826278c04f587",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-0cc5da5cafaca20f5",
            "default_route_table_id": "rtb-0872a98d1591ebc96",
            "default_security_group_id": "sg-09eb16057fe8bdd89",
            "dhcp_options_id": "dopt-07e68e18800c88fcd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0043826278c04f587",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0872a98d1591ebc96",
            "owner_id": "450183644535",
            "tags": {
              "Name": "israelalonzo-terraform-vpc"
            },
            "tags_all": {
              "Name": "israelalonzo-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}